--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flake8==3.7.9
 Flask==1.1.1
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.1
+gunicorn>=20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 jsonschema==3.2.0
@@ -19,3 +20,4 @@ SQLAlchemy==1.3.13
 Werkzeug==0.16.0
 psycopg2-binary>=2.8.4
 pytest==5.3.5
+pytest-cov>=2.8.1
