--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Click==7.0
 entrypoints==0.3
 flake8==3.7.9
 Flask==1.1.1
+Flask-Admin
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.1
 gunicorn>=20.0.4
